added basic styling to auth files

--- a/auth/index.html
+++ b/auth/index.html
@@ -3,14 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
+    <link rel="stylesheet" href="../assets/styles.css">
   </head>
   <body>
+
+    <!-- Home -->
+
     <h1>Home Page</h1>
+
     <section>
       <ul>
         <li><a href="login.html">Login</a></li>
         <li><a href="register.html">Register</a></li>
       </ul>
     </section>
+
   </body>
 </html>
