--- a/auth/login.html
+++ b/auth/login.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Login</title>
+    <link rel="stylesheet" href="../assets/styles.css">
   </head>
   <body>
 
     <header>
       <a href="index.html">Back</a>
     </header>
-    
+
+    <!-- Login Form -->
+
     <h1>Login</h1>
     <section>
       <form class="" action="auth.php" method="post">
