--- a/auth/register.html
+++ b/auth/register.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Register</title>
-    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="../assets/styles.css">
   </head>
   <body>
 
     <header>
       <a href="index.html">Back</a>
     </header>
+
+    <!-- Register From -->
 
     <h1>Register</h1>
     <section>
