added requirements to the login and register forms.

--- a/auth/login.html
+++ b/auth/login.html
@@ -17,9 +17,11 @@
     <section>
       <form class="" action="auth.php" method="post">
 
-        <input type="text" name="email" value="Email">
-        <input type="text" name="password" value="Password">
+        <input type="text" name="email" value="Email" required/>
+        <input type="text" name="password" value="Password" required/>
 
+        <input type="submit" value="Submit">
+        
       </form>
 
     </section>
