--- a/auth/register.html
+++ b/auth/register.html
@@ -11,56 +11,43 @@
       <a href="index.html">Back</a>
     </header>
 
-    <!-- Register From -->
+    <!-- Register Form -->
 
     <h1>Register</h1>
     <section>
 
-      <form class="" action="auth.php" method="post">
-        <ul class='register'>
-          <li>
-            <label for="role">Role:</label>
-            <select class="" name="role">
-              <option value="admin">Admin</option>
-              <option value="supervisor">Supervisor</option>
-              <option value="doctor">Doctor</option>
-              <option value="caregiver">Caregiver</option>
-              <option value="patient">Patient</option>
-              <option value="familymember">Family Member</option>
-            </select>
-          </li>
+      <form class="register" action="php/register.php" method="post">
 
-          <li>
-            <label for="fname">First Name:</label>
-            <input type="text" name="fname">
-          </li>
+        <label for="email">Email</label>
+        <input type="text" name="email" required/>
 
-          <li>
-            <label for="lname">Last Name:</label>
-            <input type="text" name="lname">
-          </li>
+        <label for="password">Password</label>
+        <input type="text" name="password" required/>
 
-          <li>
-            <label for="email">Email:</label>
-            <input type="text" name="email">
-          </li>
+        <label for="role">Role</label>
+        <select class="" name="role">
+          <option value="admin">Admin</option>
+          <option value="supervisor">Supervisor</option>
+          <option value="doctor">Doctor</option>
+          <option value="caregiver">Caregiver</option>
+          <option value="patient">Patient</option>
+          <option value="familymember">Family Member</option>
+        </select>
 
-          <li>
-            <label for="phone">Phone Number:</label>
-            <input type="tel" id="phone" name="phone"
-                   pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
-          </li>
+        <label for="fname">First Name</label>
+        <input type="text" name="fname" required/>
 
-          <li>
-            <label for="password">Password:</label>
-            <input type="text" name="password">
-          </li>
+        <label for="lname">Last Name</label>
+        <input type="text" name="lname" required/>
 
-          <li>
-            <label for="date-of-birth">Date of Birth:</label>
-            <input type="date" id="date-of-birth" name="date-of-birth">
-          </li>
-        </ul>
+        <label for="phone">Phone Number</label>
+        <input type="tel" id="phone" name="phone"
+               pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required/>
+
+        <label for="date-of-birth">Date of Birth</label>
+        <input type="date" id="date-of-birth" name="date-of-birth" required/>
+
+        <input type="submit" value="Submit">
       </form>
 
     </section>
