--- a/auth/index.html
+++ b/auth/index.html
@@ -14,7 +14,7 @@
     <section>
       <ul>
         <li><a href="login.html">Login</a></li>
-        <li><a href="register.html">Register</a></li>
+        <li><a href="register_temp.php">Register</a></li>
       </ul>
     </section>
 
