quick fix on adding family members
changed some file names

--- a/auth/index.html
+++ b/auth/index.html
@@ -13,7 +13,7 @@
 
     <section>
       <ul>
-        <li><a href="login.php">Login</a></li>
+        <li><a href="login_temp.php">Login</a></li>
         <li><a href="register_temp.php">Register</a></li>
       </ul>
     </section>
