header and nav created and styled

--- a/auth/index.html
+++ b/auth/index.html
@@ -6,18 +6,21 @@
     <link rel="stylesheet" href="../assets/styles.css">
   </head>
   <body>
-
     <!-- Home -->
+    <section class="home">
 
-    <h1>Home Page</h1>
+      <article>
 
-    <section>
-      <ul>
-        <li><a href="login_temp.php">Login</a></li>
-        <li><a href="register_temp.php">Register</a></li>
-      </ul>
+        <h1>Home Page</h1>
+
+
+          <ul>
+            <li><a href="login_temp.php">Login</a></li>
+            <li><a href="register_temp.php">Register</a></li>
+          </ul>
+
+      </article>
+
     </section>
-
-
   </body>
 </html>
