Move index.html out of the auth folder

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
-    <link rel="stylesheet" href="../assets/styles.css">
+    <link rel="stylesheet" href="assets/styles.css">
   </head>
   <body>
     <!-- Home -->
@@ -15,8 +15,8 @@
 
 
           <ul>
-            <li><a href="login_temp.php">Login</a></li>
-            <li><a href="register_temp.php">Register</a></li>
+            <li><a href="auth/login_temp.php">Login</a></li>
+            <li><a href="auth/register_temp.php">Register</a></li>
           </ul>
 
       </article>
